# earth

./: CMakeLists.txt  makefile  prime
src/: main.c
src/comm/: io.c  uart.c
src/platform/: x_uart.c
